# Signal

./: CMakeLists.txt  README.md
include/: signal.hpp  slot.hpp
src/: slot.cpp
tests/: CMakeLists.txt  CallableType.cpp  Connection.cpp  SignalArgs.cpp  main.cpp
